--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "webpack-cli": "^4.7.2"
   },
   "scripts": {
-    "start": "webpack --mode=development",
+    "react-dev": "webpack -p --watch",
+    "start": "nodemon ./server/index.js",
     "build": "webpack --mode=production"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
