--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "webpack-cli": "^4.7.2"
   },
   "scripts": {
-    "react-dev": "webpack -p --watch",
+    "react-dev": "webpack --watch",
     "start": "nodemon ./server/index.js",
     "build": "webpack --mode=production"
   },
