--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
+  "homepage": "https://roswell-cua.github.io/rcuaPortfolio",
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
+    "gh-pages": "^3.2.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2"
   },
   "scripts": {
     "react-dev": "webpack --watch",
     "start": "nodemon ./server/index.js",
-    "build": "webpack --mode=production"
+    "build": "webpack --mode=production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "express": "^4.17.1",
