--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://roswell-cua.github.io/rcuaPortfolio",
+  "homepage": "https://roswell-cua.github.io/rcuaPortfolio/aboutme",
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-env": "^7.14.5",
